<resources>
    <string name="app_name">SwipeBackDemo</string>
    <string name="action_github">Github</string>
    <string name="start_activity">Start new activity!</string>
    <string name="finish_activity">Finish Activity</string>

    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>

    <string name="full_back_swipe_back">FullBackSwipeBack</string>

    <string name="viewpager_activity">使用ViewPager时，全屏侧滑兼容</string>
    <string name="recyclerView_activity">使用RecyclerView时，全屏侧滑兼容</string>
    <string name="support_full_screen_back">支持全屏侧滑</string>

</resources>
