<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"/>

    <Button
        android:id="@+id/btn_start"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_activity"/>

    <Button
        android:id="@+id/btn_finish"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_start"
        android:text="@string/finish_activity"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="EdgeTrackingMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RadioGroup
                android:id="@+id/tracking_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/mode_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/tracking_mode_left"/>

                <RadioButton
                    android:id="@+id/mode_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracking_mode_right"/>

                <RadioButton
                    android:id="@+id/mode_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracking_mode_bottom"/>

                <RadioButton
                    android:id="@+id/mode_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracking_mode_all"/>

            </RadioGroup>


            <TextView
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/support_full_screen_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/full_screen_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/full_back_swipe_back"/>

            <Button
                android:id="@+id/viewpager_activity"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewpager_activity"/>

            <Button
                android:id="@+id/recyclerView_activity"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recyclerView_activity"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>




